--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
   "homepage": "https://github.com/shadow-heart/shadow-heart#readme",
   "dependencies": {
     "bookshelf": "^0.9.1",
+    "glue": "^3.1.0",
     "hapi": "^12.1.0",
+    "hapi-auth-jwt2": "^5.3.2",
     "knex": "^0.9.0",
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
+    "blipp": "^2.3.0",
+    "code": "^2.1.0",
+    "good": "^6.4.0",
+    "good-console": "^5.2.0",
+    "lab": "^8.0.2",
     "mocha": "^2.3.4",
-    "morgan": "^1.6.1",
     "supertest": "^1.1.0"
   }
 }
