--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hapi": "^12.1.0",
     "hapi-auth-jwt2": "^5.3.2",
     "knex": "^0.9.0",
+    "plugo": "^0.3.1",
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
