--- a/server/config/manifest.json
+++ b/server/config/manifest.json
@@ -14,6 +14,9 @@
       "plugin": "./auth"
     },
     {
+      "plugin": "./user"
+    },
+    {
       "plugin": {
         "register": "good",
         "options": {
