--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "path": "^0.12.7",
     "plugo": "^0.3.1",
     "sails-mysql": "^0.11.2",
-    "shortid": "^2.2.4"
+    "shortid": "^2.2.4",
+    "knex": "^0.9.0",
+    "sqlite3": "^3.1.1"
   },
   "devDependencies": {
     "blipp": "^2.3.0",
+    "code": "^2.1.0",
     "chai": "^3.4.1",
     "good": "^6.4.0",
     "good-console": "^5.2.0",
