--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "glue": "^3.1.0",
     "hapi": "^12.1.0",
     "hapi-auth-jwt2": "^5.3.2",
+    "jsonwebtoken": "^5.5.4",
     "plugo": "^0.3.1",
     "sails-mysql": "^0.11.2",
     "shortid": "^2.2.4"
