set up medications

--- a/server/config/manifest.json
+++ b/server/config/manifest.json
@@ -20,6 +20,9 @@
       "plugin": "./user"
     },
     {
+      "plugin": "./medications"
+    },
+    {
       "plugin": {
         "register": "good",
         "options": {
