--- a/server/config/manifest.json
+++ b/server/config/manifest.json
@@ -20,7 +20,7 @@
       "plugin": "./user"
     },
     {
-      "plugin": "./medications"
+      "plugin": "./medication"
     },
     {
       "plugin": {
