--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "bcrypt-nodejs": "0.0.3",
     "crypto-js": "^3.1.6",
     "dogwater": "^1.1.0",
-    "bookshelf": "^0.9.1",
+    "glob": "^6.0.4",
     "glue": "^3.1.0",
     "hapi": "^12.1.0",
     "hapi-auth-jwt2": "^5.3.2",
     "jsonwebtoken": "^5.5.4",
+    "path": "^0.12.7",
     "plugo": "^0.3.1",
     "sails-mysql": "^0.11.2",
-    "shortid": "^2.2.4",
-    "knex": "^0.9.0",
-    "sqlite3": "^3.1.1"
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "blipp": "^2.3.0",
