--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "protractor-http-mock": "^0.2.1",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
