(fix) api handles cors

--- a/server/config/manifest.json
+++ b/server/config/manifest.json
@@ -5,9 +5,7 @@
       "port": "3003",
       "labels": ["api"],
       "routes": {
-        "cors": {
-          "origin": [ "http://localhost:8100" ]
-        }
+        "cors": true
       }
     }
   ],
