--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "path": "^0.12.7",
     "plugo": "^0.3.1",
     "sails-mysql": "^0.11.2",
-    "shortid": "^2.2.4",
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "blipp": "^2.3.0",
