(fix) force SSL on Heroku, remove user from signup response

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A medication tracking and reminder app",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "5.4.0"
   },
   "repository": {
     "type": "git",
