(feat) init web client

--- a/server/config/manifest.json
+++ b/server/config/manifest.json
@@ -21,6 +21,12 @@
       "plugin": "hapi-auth-jwt2"
     },
     {
+      "plugin": "vision"
+    },
+    {
+      "plugin": "inert"
+    },
+    {
       "plugin": "./authentication"
     },
     {
