--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
   "homepage": "https://github.com/shadow-heart/shadow-heart#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "browser-sync": "^2.11.1",
     "crypto-js": "^3.1.6",
     "dogwater": "^1.1.0",
+    "ejs": "^2.4.1",
     "glob": "^6.0.4",
     "glue": "^3.1.0",
     "good": "^6.4.0",
     "good-console": "^5.2.0",
     "hapi": "^12.1.0",
     "hapi-auth-jwt2": "^5.3.2",
+    "inert": "^3.2.0",
     "joi": "^7.2.2",
     "jsonwebtoken": "^5.5.4",
     "path": "^0.12.7",
     "plugo": "^0.3.1",
-    "sails-mongo": "^0.12.0"
+    "sails-mongo": "^0.12.0",
+    "vision": "^4.0.1"
   },
   "devDependencies": {
     "blipp": "^2.3.0",
@@ -55,6 +59,7 @@
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
+    "gulp-live-server": "0.0.29",
     "mocha": "^2.3.4",
     "sails-memory": "^0.10.5",
     "supertest": "^1.1.0",
