--- a/package.json
+++ b/package.json
@@ -40,8 +40,26 @@
     "blipp": "^2.3.0",
     "chai": "^3.4.1",
     "gulp": "^3.9.0",
+    "gulp-angular-protractor": "0.0.7",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-filesize": "0.0.6",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.5.2",
+    "gulp-tape": "0.0.7",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
     "mocha": "^2.3.4",
     "sails-memory": "^0.10.5",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "tap-colorize": "^1.2.0",
+    "tape": "^4.4.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
