--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: node_js
-
-script: grunt test
-
-# test on two node.js versions: 0.12 and 0.10
 node_js:
-  - '0.12'
-  - '0.10'
+  - '4.0.0'
+script: gulp test
