--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: node_js
 node_js:
-  - '4.0.0'
+  - "4"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+before_script:
+  - npm install -g gulp
 script: gulp test
