--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,7 @@
     "bower": "^1.3.3",
     "gulp-angular-protractor": "0.0.7",
     "gulp-util": "^2.2.14",
-    "protractor-http-mock": "^0.2.1",
-    "shelljs": "^0.3.0",
-    "tap-colorize": "^1.2.0",
-    "tape": "^4.4.0"
+    "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
