(fix) signin tests using protractor

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-filesize": "0.0.6",
     "gulp-jshint": "^2.0.0",
+    "gulp-live-server": "0.0.29",
     "gulp-load-plugins": "^1.2.0",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
@@ -57,9 +58,9 @@
     "gulp-tape": "0.0.7",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "jasmine-given": "^2.6.4",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
-    "gulp-live-server": "0.0.29",
     "mocha": "^2.3.4",
     "sails-memory": "^0.10.5",
     "supertest": "^1.1.0",
