--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
+    "postinstall": "webpack --config ./webpack-production.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -41,6 +42,9 @@
     "vision": "^4.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
     "blipp": "^2.3.0",
     "chai": "^3.4.1",
     "gulp": "^3.9.0",
@@ -62,6 +66,7 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.3.4",
+    "react-hot-loader": "^1.3.0",
     "sails-memory": "^0.10.5",
     "supertest": "^1.1.0",
     "tap-colorize": "^1.2.0",
