--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "postinstall": "webpack --config ./webpack-production.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -65,8 +64,6 @@
     "sails-memory": "^0.10.5",
     "supertest": "^1.1.0",
     "tap-colorize": "^1.2.0",
-    "tape": "^4.4.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.12.12"
+    "tape": "^4.4.0"
   }
 }
