--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/shadow-heart/shadow-heart#readme",
   "dependencies": {
+    "angular": "^1.4.9",
+    "angular-ui-router": "^0.2.17",
     "bcrypt-nodejs": "0.0.3",
     "crypto-js": "^3.1.6",
     "dogwater": "^1.1.0",
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "blipp": "^2.3.0",
     "chai": "^3.4.1",
@@ -64,10 +68,10 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.3.4",
-    "react-hot-loader": "^1.3.0",
     "sails-memory": "^0.10.5",
     "supertest": "^1.1.0",
     "tap-colorize": "^1.2.0",
-    "tape": "^4.4.0"
+    "tape": "^4.4.0",
+    "webpack": "^1.12.12"
   }
 }
