--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/shadow-heart/shadow-heart#readme",
   "dependencies": {
     "angular": "^1.4.9",
+    "angular-component": "0.0.6",
     "angular-ui-router": "^0.2.17",
     "bcrypt-nodejs": "0.0.3",
     "crypto-js": "^3.1.6",
