--- a/client/bower.json
+++ b/client/bower.json
@@ -16,7 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "ionic-material": "~0.4.2"
+    "ionic-material": "~0.4.2",
+    "ngCordova": "~0.1.24-alpha"
   },
   "devDependencies": {
     "platform.js": "platform#~1.3.1"
