--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "path": "^0.12.7",
     "plugo": "^0.3.1",
     "sails-mongo": "^0.12.0",
+    "vinyl-source-stream": "^1.1.0",
     "vision": "^4.0.1"
   },
   "devDependencies": {
