--- a/client/bower.json
+++ b/client/bower.json
@@ -19,6 +19,7 @@
     "ionic-material": "~0.4.2",
     "ngCordova": "~0.1.24-alpha",
     "angular-nvd3": "~1.0.5",
-    "angular-chart.js": "~0.8.8"
+    "angular-chart.js": "~0.8.8",
+    "angular-ui-clock": "~0.5.0"
   }
 }
