--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "^1.4.9",
     "angular-component": "0.0.6",
+    "angular-ui-bootstrap": "^1.1.2",
     "angular-ui-router": "^0.2.17",
     "bcrypt-nodejs": "0.0.3",
     "crypto-js": "^3.1.6",
@@ -77,8 +78,6 @@
     "supertest": "^1.1.0",
     "tap-colorize": "^1.2.0",
     "tape": "^4.4.0",
-
     "webpack": "^1.12.12"
-
   }
 }
