(refactor) update before rebase

--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "angular-ui-clock": "~0.5.0",
     "moment": "~2.11.2",
     "ionic-nifty-modal": "*",
-    "jsTag": "~0.3.6"
+    "jsTag": "~0.3.6",
+    "ionic-timepicker": "^0.4.0"
   }
 }
