--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "path": "^0.12.7",
     "plugo": "^0.3.1",
     "sails-mongo": "^0.12.0",
+    "shortid": "^2.2.4",
     "vinyl-source-stream": "^1.1.0",
     "vision": "^4.0.1"
   },
