--- a/client/bower.json
+++ b/client/bower.json
@@ -20,6 +20,7 @@
     "angular-nvd3": "~1.0.5",
     "ngCordova": "~0.1.23-alpha",
     "angular-chart.js": "~0.8.8",
-    "angular-ui-clock": "~0.5.0"
+    "angular-ui-clock": "~0.5.0",
+    "moment": "~2.11.2"
   }
 }
