--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "inert": "^3.2.0",
     "joi": "^7.2.2",
     "jsonwebtoken": "^5.5.4",
+    "moment": "^2.11.2",
     "node-neat": "^1.7.2",
     "path": "^0.12.7",
     "plugo": "^0.3.1",
