--- a/client/bower.json
+++ b/client/bower.json
@@ -21,6 +21,10 @@
     "ngCordova": "~0.1.23-alpha",
     "angular-chart.js": "~0.8.8",
     "angular-ui-clock": "~0.5.0",
-    "moment": "~2.11.2"
+    "moment": "~2.11.2",
+    "ionic-nifty-modal": "*",
+    "jsTag": "~0.3.6",
+    "typeahead.js": "~0.11.1",
+    "angular-typeahead": "~0.3.1"
   }
 }
