--- a/client/bower.json
+++ b/client/bower.json
@@ -23,8 +23,6 @@
     "angular-ui-clock": "~0.5.0",
     "moment": "~2.11.2",
     "ionic-nifty-modal": "*",
-    "jsTag": "~0.3.6",
-    "typeahead.js": "~0.11.1",
-    "angular-typeahead": "~0.3.1"
+    "jsTag": "~0.3.6"
   }
 }
